Remove hardcoded broken options from index.html

--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
                 </div>
                 <div class="control-group">
                     <label for="scale-type-select">Scale</label>
-                    <select id="scale-type-select">
-                        <option value="major">Major</option>
-                        <option value="minor">Natural Minor</option>
-                    </select>
+                    <select id="scale-type-select"></select>
                 </div>
             </div>
         </header>
