feat: Implement generative music engine with UI for chord progression generation and MIDI export.

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     <script src="src/constants.js"></script>
     <script src="src/theory.js"></script>
     <script src="src/midi.js"></script>
+    <script src="src/engine.js"></script>
     <script src="src/ui.js"></script>
     <script src="src/main.js"></script>
 </body>
