feat: Implement build process to bundle JavaScript files and add chord voicing optimization for generated chords.

--- a/index.html
+++ b/index.html
@@ -103,13 +103,8 @@
             </aside>
         </main>
     </div>
-    <script src="https://unpkg.com/jsmidgen@0.1.5/lib/jsmidgen.js"></script>
-    <script src="src/constants.js"></script>
-    <script src="src/theory.js"></script>
-    <script src="src/midi.js"></script>
-    <script src="src/engine.js"></script>
-    <script src="src/ui.js"></script>
-    <script src="src/main.js"></script>
+    <script src="dist/jsmidgen.js"></script>
+    <script src="dist/app.js"></script>
 </body>
 
 </html>
